--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,17 +30,18 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+   
     overflow: hidden;
 
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.512);
 
-    transition: width: .3s, height: 0.3s;
+    transition: width 0.3s ease, height 0.3s ease;
     transition-timing-function: ease;
+    transform: translate(-50%, -50%);
 }
 
 section#login > div#imagem {
@@ -64,4 +65,82 @@ div#formulario > h1 {
 
 div#formulario > p {
     font-size: 0.8em;
+}
+
+form > div#campo{
+    background-color: #5f2c82;
+    border: 2px solid #5f2c82;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px, 0px;
+
+}
+
+div#campo > span {
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div#campo > input {
+    background-color: #6aebe7;
+    font-size: 1em;
+    width: calc(100% -44px);
+    height: 100%;
+    border: 0px;
+    border-radius: 5px;
+    padding: 4px;
+    transform: translateY(-12px);
+}
+
+div#campo > label {
+    display: none;
+}
+
+div#campo > input:focus-within {
+    background-color: white;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40%;
+    background-color: #49a09d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover{
+    background-color: #2b5e5c;
+}
+
+form > a.botao {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40%;
+    background-color: white;
+    color: #2b5e5c;
+    border: 1px solid #49a09d;
+    border-radius: 5px;
+    cursor: pointer;
+    text-align: center;
+    padding-top: 5px;
+    margin-top: 5px;
+
+}
+
+form > a.botao:hover{
+    background-color: #59c4c1;
+
+}
+
+form > a.botao > i {
+    font-size: .8em;
 }
